# rustiq

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  Readme.md  pyproject.toml  setup.py
benchmarks/: run_chem.sh
benchmarks/chem/: C2H4_cmplt_BK_sto3g.txt  C2H4_cmplt_JW_sto3g.txt  C2H4_cmplt_P_sto3g.txt  C2H4_frz_BK_sto3g.txt  C2H4_frz_JW_sto3g.txt  C2H4_frz_P_sto3g.txt  CH2_cmplt_BK_sto3g.txt  CH2_cmplt_JW_sto3g.txt  CH2_cmplt_P_sto3g.txt  CH2_frz_BK_sto3g.txt  CH2_frz_JW_sto3g.txt  CH2_frz_P_sto3g.txt  H2O_cmplt_BK_631g.txt  H2O_cmplt_BK_sto3g.txt  H2O_cmplt_JW_631g.txt  H2O_cmplt_JW_sto3g.txt  H2O_cmplt_P_631g.txt  H2O_cmplt_P_sto3g.txt  H2O_frz_BK_631g.txt  H2O_frz_BK_sto3g.txt  H2O_frz_JW_631g.txt  H2O_frz_JW_sto3g.txt  H2O_frz_P_631g.txt  H2_cmplt_BK_631g.txt  H2_cmplt_BK_ccpvdz.txt  H2_cmplt_BK_ccpvtz.txt  H2_cmplt_BK_sto3g.txt  H2_cmplt_JW_631g.txt  H2_cmplt_JW_ccpvtz.txt  H2_cmplt_JW_sto3g.txt  H2_cmplt_P_631g.txt  H2_cmplt_P_ccpvdz.txt  H2_cmplt_P_ccpvtz.txt  H2_cmplt_P_sto3g.txt  H4_cmplt_BK_631g.txt  H4_cmplt_BK_ccpvdz.txt  H4_cmplt_BK_sto3g.txt  H4_cmplt_JW_631g.txt  H4_cmplt_JW_ccpvdz.txt  H4_cmplt_JW_sto3g.txt  (+32 more)
examples/: check_diag_network.py  codiagonalization.py  graph_state_synthesis.py  h_opt_example.py  isometry_synthesis.py  pauli_network_synthesis.py
python/rustiq/: __init__.py  utils.py
rustiq/: __init__.py  h_gadget.py  utils.py
src/: circuit.rs  commutation_dag.rs  graph_state.rs  graph_test.rs  greedy_measurements_phase_poly.rs  greedy_order_preserving.rs  greedy_pauli_network.rs  h_opt.rs  interface.rs  lazy_synthesis.rs  lib.rs  main.rs  pauli_network.rs  pauli_set.rs  test_steiners.rs
src/routines/: decoding.rs  f2_linalg.rs  mod.rs  rotation_extraction.rs  rotation_optimization.rs
src/structures/: clifford_circuit.rs  graph_state.rs  hardware.rs  isometry.rs  metric.rs  mod.rs  parameter.rs  pauli.rs  pauli_dag.rs  pauli_like.rs  pauli_set.rs  tableau.rs
src/synthesis/: mod.rs
src/synthesis/clifford/: graph_state.rs  mod.rs
src/synthesis/linear/: greedy_ge.rs  (+1 more)
(+23 files in other folders)
