[package]
name = "rustiq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive", "cargo"] }
petgraph = "0.6.3"
itertools = "0.10.5"
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[build]
rustflags = ["-C", "target-feature=+avx2"]