[package]
name = "rustiq"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive", "cargo"] }
pyo3 = { version = "0.18.2", features = ["extension-module"] }
petgraph = "0.6.3"
itertools = "0.10.5"
rand = "0.8.5"
rustiq-core = "0.0.5"
