[package]
name = "rustiq"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive", "cargo"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
petgraph = "0.8.1"
itertools = "0.14.0"
rand = "0.9.0"
rustiq-core = "0.0.11"
